<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_layout_style"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.codegear.mariamc_rfid.rfidreader.settings.BatteryFragment"
    android:padding="40dp">

    <TextView
        android:id="@+id/batteryLevelText"
        style="@style/style_green_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/battery_percentage_text" />

    <ImageView
        android:id="@+id/batteryLevelImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/app_margin"
        android:layout_weight="1"
        android:contentDescription="@string/battery_level_desc"
        app:srcCompat="@drawable/battery_level" />

    <TextView
        android:id="@+id/batteryStatusText"
        style="@style/style_grey_font"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/battery_no_active_connection_message" />

</LinearLayout>



