<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codegear.mariamc_rfid.rfidreader.settings.RegulatorySettingsFragment">

    <TextView
        android:id="@+id/regulatorySettingsCurrentRegion"
        style="@style/style_normal_font"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/transparent_grey"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_padding"
        android:text="@string/region_title" />

    <include layout="@layout/divider" />

    <Spinner
        android:id="@+id/currentRegionSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/default_bottom_margin"
        android:layout_weight="8" />

    <include layout="@layout/divider" />

    <TextView
        android:id="@+id/regulatorySettingsChannelSelectionTitle"
        style="@style/style_normal_font"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/transparent_grey"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_padding"
        android:text="@string/channel_selection" />

    <include layout="@layout/divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45">

        <LinearLayout
            android:id="@+id/regChannelCheckBoxes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_warning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18">

        <TextView
            android:id="@+id/selectCountryWarningText"
            style="@style/style_red_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin"
            android:paddingTop="@dimen/margin"
            android:text="@string/country_selection_warning" />

        <Button
            android:id="@+id/regulatoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/default_margin"
            android:onClick="showProfileSettings"
            android:text="@string/next"
            android:textColor="@color/white"
            app:backgroundTint="@color/blue"
            app:iconTint="@color/white" />
    </RelativeLayout>

</LinearLayout>

