<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context="com.codegear.mariamc_rfid.scanner.fragments.BarcodeFragment">

    <TextView
        android:id="@+id/barcodesListCount"
        style="@style/roboto_regular_16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="18dp"
        android:gravity="center_vertical"
        android:text="스캔된 바코드: 0" />

    <ListView
        android:id="@+id/barcodesList"
        style="@style/style_scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:fadeScrollbars="false"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="false"
        android:scrollIndicators="right"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:transcriptMode="alwaysScroll"
         />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnClearList"
            style="@style/style_blue_gray_button"
            android:layout_width="match_parent"
            android:onClick="clearList"
            android:text="@string/clearList"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnScanTrigger"
            style="@style/style_blue_gray_button"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="scanTrigger"
            android:text="@string/scanTrigger"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_batch_request"
            style="@style/style_blue_gray_button"
            android:layout_width="match_parent"
            android:onClick="initBatchRequest"
            android:text="@string/batch_request"
            android:textSize="12sp" />

    </TableRow>
</LinearLayout>
